--- a/mtvfront/src/app/pages/despachos/despachos.component.html
+++ b/mtvfront/src/app/pages/despachos/despachos.component.html
@@ -7,33 +7,67 @@
         </ol>
 
         <form
-        autocomplete="off"
-        id="despachoform">
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputEmail4">Guia</label>
-                <input type="text" class="form-control" id="guia" name="guia" [(ngModel)]="Despacho.numero">
+        autocomplete="off" id="despachoform">
+            <div class="row">
+              <div class="form-group col-md-2 col-lg-2">
+                  <label for="inputEmail4">Guia</label>
+                  <input type="text" class="form-control" id="guia" name="guia" [(ngModel)]="Despacho.numero">
               </div>
-              <div class="form-group col-md-6">
+
+              <div class="form-group col-md-3 col-lg-3">
                 <label for="inputPassword4">Descripcion</label>
-                <input type="text" class="form-control" id="descripcion" name="descripcion" [(ngModel)]="Despacho.descripcion">
+                <input type="text" class="form-control" id="descripcion" name="descripcion" [(ngModel)]="Despacho.descripcion">  
+               </div>
+ 
+              <div class="form-group col-md-3 col-lg-3">
+                <label for="inputAddress">Nave</label>
+                <input type="text" class="form-control" id="nave" name="nave" [(ngModel)]="Despacho.nave" >
               </div>
-            </div>
-            <div class="form-group col-md-6">
-              <label for="inputAddress">Nave</label>
-              <input type="text" class="form-control" id="nave" name="nave" [(ngModel)]="Despacho.nave" >
+
+              <div class="form-group col-md-4 col-lg-4">
+                <label for="exampleFormControlSelect1">Puerto</label>
+                <select class="form-control" id="puerto" name="puerto"  [(ngModel)]="Despacho.puerto_id">
+                  <option value="0">Seleccione Puerto</option>
+                  <option  *ngFor="let puerto of puertos" 
+                  [selected]="puerto.puerto_id === ngSelectPuerto">{{puerto.nombre}}</option>
+                </select>
+              </div>
+            
             </div>
            
-          
-            <div class="form-group">
-             <br>
+            <div class="row">
+
+                
+            <div class="form-group col-md-3 col-lg-3">
+              <label for="exampleFormControlSelect1">Conductor</label>
+              <select  class="form-control" id="conductor" name="conductor"  [(ngModel)]="Despacho.conductor_id">
+                <option value="0">Seleccione Conductor</option>
+                <option  *ngFor="let conductor of conductores" 
+                [selected]="conductor.conductor_id === ngSelectConductor">{{conductor.nombre}}</option>
+              </select>
             </div>
-            <button *ngIf="ocultarRegistro" type="button" class="btn btn-success" (click)="crearDespacho()">Crear</button>
+
+            <div class="form-group col-md-3 col-lg-3">
+              <label for="exampleFormControlSelect1">Cliente</label>
+              <select  class="form-control" id="cliente" name="cliente" [(ngModel)]="Despacho.cliente_id">
+                <option value="0">Seleccione Cliente</option>
+                <option  *ngFor="let cliente of clientes"
+                [selected]="cliente.cliente_id === ngSelectCliente">{{cliente.nombre}}</option>
+              </select>
+            </div>
+
+            <div class="form-group col-md-3 col-lg-3">
+              <br>
+            <button *ngIf="ocultarRegistro" type="button" class="btn btn-success" (click)="crearDespacho()">Crear guia</button>
             <div *ngIf="ocultarEditar">
             <button  type="button" class="btn btn-primary" (click)="actualizaDespacho()">Editar</button>
             &nbsp;
             <button  type="button" class="btn btn-danger" (click)="cancelarUpdate()">Cancelar</button>
-          </div>
+            </div>
+            </div>
+
+            </div>
+
           </form>
         
           <br>
@@ -57,10 +91,13 @@
                 <table class="table table-bordered">
                     <thead>
                         <tr>
-                            <th  scope="col">id</th>
                             <th  scope="col">Guia</th>
                             <th  scope="col">Descripcion</th>
                             <th  scope="col">nave</th>
+                            <th  scope="col">Puerto</th>
+                            <th  scope="col">Conductor</th>
+                            <th  scope="col">Cliente</th>
+                            <th  scope="col">Estado</th>
                             <th  scope="col">Detalle</th>
                             <th  scope="col">Acciones</th>
                         </tr>
@@ -68,10 +105,14 @@
                     
                     <tbody>
                         <tr *ngFor="let despacho of despachos | filtro:page:buscar">
-                            <td>{{ despacho.despacho_id}}</td>
                             <td>{{ despacho.numero}}</td>
                             <td>{{ despacho.descripcion}}</td>
                             <td>{{ despacho.nave}}</td>
+                            <td>{{ despacho.Puertonombre}}</td>
+                            <td>{{ despacho.cname}}</td>
+                            <td>{{ despacho.cliname}}</td>
+                            <td *ngIf="despacho.estado == 'Finalizado'"><span >{{ despacho.estado}}</span></td>
+                            <td *ngIf="despacho.estado == 'Proceso'"><span >{{ despacho.estado}}</span></td>
                             <td>
                               <button 
                               type="button" 
@@ -120,59 +161,109 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <form>
-              <div class="mb-3">
-                <label for="recipient-name" class="col-form-label">Recipient:</label>
-                <input type="text" class="form-control" id="recipient-name">
-              </div>
-              <div class="mb-3">
-                <label for="message-text" class="col-form-label">Message:</label>
-                <textarea class="form-control" id="message-text"></textarea>
-              </div>
-              <button type="button" class="btn btn-primary">Send message</button>
-              &nbsp;
-              <button type="button" class="btn btn-success" data-bs-dismiss="modal">Close</button>
-            </form>
+            <form
+            autocomplete="off" id="despachoform">
+                <div class="row">
+                  <div class="form-group col-md-4 col-lg-4">
+                      <label for="inputEmail4">Cod Contenedor/Detalle</label>
+                      <input type="text" class="form-control" id="descripcion" name="descripcion" [(ngModel)]="Despacho.numero">
+                  </div>
+    
+                  <div class="form-group col-md-3 col-lg-3">
+                    <label for="inputPassword4">tipo</label>
+                    <input type="text" class="form-control" id="tipo" name="tipo" [(ngModel)]="Despacho.descripcion">  
+                   </div>
+     
+                  <div class="form-group col-md-2 col-lg-2">
+                    <label for="inputAddress">peso</label>
+                    <input type="text" class="form-control" id="peso" name="peso" [(ngModel)]="Despacho.nave" >
+                  </div>
+    
+                  <div class="form-group col-md-3 col-lg-3">
+                    <label for="exampleFormControlSelect1">Fecha Retiro</label>
+                    <input type="text" class="form-control" id="fechar" name="fechar" [(ngModel)]="Despacho.nave" >
+                  </div>
+                
+                </div>
+               <br>
+                <div class="row">
+
+                  <div class="form-group col-md-3 col-lg-3">
+                    <label for="exampleFormControlSelect1">Tarjeton</label>
+                    <input type="text" class="form-control" id="tarjeton" name="tarjeton" [(ngModel)]="Despacho.nave" >
+                  </div>
+
+
+                  <div class="form-group col-md-3 col-lg-3">
+                    <label for="exampleFormControlSelect1">Fecha entrega</label>
+                    <input type="text" class="form-control" id="fechae" name="fechae" [(ngModel)]="Despacho.nave" >
+                  </div>
+
+                  <div class="form-group col-md-3 col-lg-3">
+                    <label for="exampleFormControlSelect1">Puerto Devolucion</label>
+                    <select class="form-control" id="puertod" name="puertod"  [(ngModel)]="Despacho.puerto_id">
+                      <option value="0">Seleccione Puerto</option>
+                      <option  *ngFor="let puerto of puertos" 
+                      [selected]="puerto.puerto_id === ngSelectPuerto">{{puerto.nombre}}</option>
+                    </select>
+                  </div>
+
+
+                  <div class="form-group col-md-3 col-lg-3">
+                    <label for="exampleFormControlSelect1">Direcciones</label>
+                    <select class="form-control" id="direccion" name="direccion"  [(ngModel)]="Despacho.puerto_id">
+                      <option value="0">Seleccione Direccion</option>
+                      <option ></option>
+                    </select>
+                  </div>
+    
+               
+    
+                </div>
+
+                <div class="row">
+                  <div class="form-group col-md-3 col-lg-3">
+                    <br>
+                  <button *ngIf="ocultarRegistro" type="button" class="btn btn-success" (click)="crearDespacho()">Agregar detalle</button>
+                  <div *ngIf="ocultarEditar">
+                  <button  type="button" class="btn btn-primary" (click)="actualizaDespacho()">Editar</button>
+                  &nbsp;
+                  <button  type="button" class="btn btn-danger" (click)="cancelarUpdate()">Cancelar</button>
+                  </div>
+                  </div>
+                </div>
+    
+              </form>
 
             <br><br>
             <table class="table table-bordered">
               <thead>
                   <tr>
-                      <th  scope="col">id</th>
-                      <th  scope="col">Guia</th>
+                   
                       <th  scope="col">Descripcion</th>
-                      <th  scope="col">nave</th>
-                      <th  scope="col">Detalle</th>
-                      <th  scope="col">Acciones</th>
+                      <th  scope="col">tipo</th>
+                      <th  scope="col">peso</th>
+                      <th  scope="col">fecha retiro</th>
+                      <th  scope="col">tarjeton</th>
+                      <th  scope="col">fecha entrega</th>
+                      <th  scope="col">Dev. Puerto</th>
+                      <th  scope="col">Direccion</th>
                   </tr>
               </thead>
               
               <tbody>
-                  <tr *ngFor="let despacho of despachos | filtro:page:buscar">
-                      <td>{{ despacho.despacho_id}}</td>
-                      <td>{{ despacho.numero}}</td>
-                      <td>{{ despacho.descripcion}}</td>
-                      <td>{{ despacho.nave}}</td>
-                      <td>
-                        <button 
-                        type="button" 
-                        class="btn btn-success"
-                        data-bs-toggle="modal"
-                        data-bs-target="#exampleModal">Ingresar Detalle</button>
-
-                      </td>
-                      <td><div 
-                        class="btn-group" 
-                        role="group" aria-label="Button group with nested dropdown">
-                        <button 
-                        type="button" 
-                        class="btn btn-primary"
-                        (click)="editarDespacho(despacho)">Editar</button>
-                        <button 
-                        type="button" 
-                        class="btn btn-danger"
-                        (click)="eliminarDespacho(despacho)">Eliminar</button>
-                      </div></td>
+                  <tr *ngFor="let detalle of detalles">
+                 
+                      <td>{{detalle.descripcion}}</td>
+                      <td>{{detalle.tipo}}</td>
+                      <td>{{detalle.peso}}</td>
+                      <td>{{detalle.fecha_retiro}}</td>
+                      <td>{{detalle.tarjeton}}</td>
+                      <td>{{detalle.fecha_entrega}}</td>
+                      <td>{{detalle.pname}}</td>
+                      <td>{{detalle.dname}}</td>
+                    
+                      
                   </tr>
 
               </tbody>
