--- a/app/src/app/shared/sidebar/sidebar.component.html
+++ b/app/src/app/shared/sidebar/sidebar.component.html
@@ -16,10 +16,14 @@
                
 
                     <div class="sb-sidenav-menu-heading">Supervision</div>
-                    <a class="nav-link" routerLink="facturas">
-                        <div class="sb-nav-link-icon"><i class="fa-solid fa-file-invoice-dollar"></i></div>
+                   <a class="nav-link" routerLink="facturas">
+                         <div class="sb-nav-link-icon"><i class="fa-solid fa-file-invoice-dollar"></i></div>
                         PreFacturas
                     </a>
+                    <a class="nav-link" routerLink="facturacion">
+                        <div class="sb-nav-link-icon"><i class="fa-solid fa-file-invoice-dollar"></i></div>
+                       Facturación
+                   </a>
                   
                     <div class="sb-sidenav-menu-heading">Administrar</div>
                     <a class="nav-link" routerLink="usuarios">
