--- a/app/src/app/pages/facturas/facturas.component.html
+++ b/app/src/app/pages/facturas/facturas.component.html
@@ -1,1 +1,167 @@
-<p>facturas works!</p>
+
+
+<div class="card mb-4">
+<div class="card-header">
+    <i class="fas fa-table me-1"></i>
+   Despachos
+</div>
+
+<div class="card-body">
+
+    <input type="text"
+    class="form-control col-lg-3"
+    placeholder="Buscar guia por descripcion" 
+    #txtbuscar
+   />
+    <br>
+    <br>
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th  scope="col">Guia</th>
+                <th  scope="col">Descripcion</th>
+                <th  scope="col">nave</th>
+                <th  scope="col">Puerto</th>
+                <th  scope="col">Conductor</th>
+                <th  scope="col">Cliente</th>
+                <th  scope="col">Estado</th>
+                <th  scope="col">Ver</th>
+              
+            </tr>
+        </thead>
+        
+        <tbody>
+            <tr *ngFor="let despacho of despachos">
+                <td>{{ despacho.numero}}</td>
+                <td>{{ despacho.descripcion}}</td>
+                <td>{{ despacho.nave}}</td>
+                <td>{{ despacho.Puertonombre}}</td>
+                <td>{{ despacho.cname}}</td>
+                <td>{{ despacho.cliname}}</td>
+                <td *ngIf="despacho.estado == 'Finalizado'"><span class="badge bg-success" >{{ despacho.estado}}</span></td>
+                <td *ngIf="despacho.estado == 'Proceso'" ><span class="badge bg-warning">{{ despacho.estado}}</span></td>
+                <td *ngIf="despacho.estado == 'Confirmado'" ><span class="badge bg-info">{{ despacho.estado}}</span></td>
+               
+                <td>
+                  <div 
+                  class="btn-group" 
+                  role="group" aria-label="Button group with nested dropdown">
+
+                  <button 
+                  type="button" 
+                  class="btn btn-outline-info"
+                  data-bs-toggle="modal"
+                  data-bs-target="#factura"
+                  (click)="getFactura(despacho)"
+                  >PreFactura</button>
+
+                  <button 
+                  type="button" 
+                  class="btn btn-outline-secondary"
+                  data-bs-toggle="modal"
+                  data-bs-target="#detalle"
+                  >Detalle</button>
+                </div>
+            </td>
+            </tr>
+
+        </tbody>
+    </table>
+
+    
+<br>
+
+</div>
+</div>
+  
+  
+  
+    <!-- Modal -->
+<div class="modal fade" id="factura" tabindex="-1" aria-labelledby="costosModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <form 
+        autocomplete="off" 
+        id="TarifaForm">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Detalle Factura</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="form-check form-switch">
+         
+
+            <ul *ngFor="let tarifadespacho of tarifadespachos" 
+            class="list-group list-group-horizontal">
+              <li class="list-group-item">{{tarifadespacho.Tarifa.nombre}}</li>
+              <li class="list-group-item">$</li>
+              <li class="list-group-item">{{tarifadespacho.Tarifa.valor_externo}}</li>
+            </ul>
+
+        
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-success" (click)="setEstadoDespacho()">Confirmar</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        </div>
+       </form>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="modal fade" id="detalle" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog  modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Guia N° </h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          
+
+          <br><br>
+          <table class="table table-bordered">
+            <thead>
+                <tr>
+                 
+                    <th  scope="col">Descripcion</th>
+                    <th  scope="col">tipo</th>
+                    <th  scope="col">peso</th>
+                    <th  scope="col">fecha retiro</th>
+                    <th  scope="col">tarjeton</th>
+                    <th  scope="col">fecha entrega</th>
+                    <th  scope="col">Dev. Puerto</th>
+                    <th  scope="col">Direccion</th>
+                    <th  scope="col">Acciones</th>
+                </tr>
+            </thead>
+            
+            <tbody>
+                <tr >
+               
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                   
+                  
+                    
+                </tr>
+
+            </tbody>
+        </table>
+        </div>
+
+
+        <div class="modal-footer">
+         
+        </div>
+      </div>
+    </div>
+  </div>
