--- a/app/src/app/shared/sidebar/sidebar.component.html
+++ b/app/src/app/shared/sidebar/sidebar.component.html
@@ -9,8 +9,20 @@
                         Dashboard
                     </a>
                     <a class="nav-link" routerLink="despachos">
-                        <div class="sb-nav-link-icon"><i class="fa-solid fa-truck-fast"></i></div>
+                        <div class="sb-nav-link-icon"><i class="fa-solid fa-box"></i></div>
                         Despachos
+                    </a>
+                    <a class="nav-link" routerLink="cliente">
+                        <div class="sb-nav-link-icon"><i class="fa-solid fa-user-tie"></i></div>
+                        Clientes
+                    </a>
+                    <a class="nav-link" routerLink="conductor">
+                        <div class="sb-nav-link-icon"><i class="fa-regular fa-id-card"></i></div>
+                        Conductor
+                    </a>
+                    <a class="nav-link" routerLink="vehiculos">
+                        <div class="sb-nav-link-icon"><i class="fa-solid fa-truck-fast"></i></div>
+                        Vehiculos
                     </a>
 
                
@@ -29,6 +41,11 @@
                     <a class="nav-link" routerLink="usuarios">
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-users"></i></div>
                         Usuarios
+                    </a>
+
+                    <a class="nav-link" routerLink="tarifa">
+                        <div class="sb-nav-link-icon"><i class="fa-solid fa-users"></i></div>
+                        Tarifas
                     </a>
                 
                 </div>
